MonetDB4/tests/BugReports/Tests/no.098.milS
# >Number:         98
# >Category:       Mserver
# >Synopsis:       wrong select when a BAT contains one BUN
# >Confidential:   no
# >Severity:       critical
# >Priority:       high
# >Responsible:    boncz
# >State:          open
# >Class:          sw-bug
# >Submitter-Id:   unknown
# >Arrival-Date:   Fri Dec 12 19:56:04 1997
# >Originator:     windhouw
# >Organization:
# UvA
# >Release:        971007
# >Environment:
# 
# >Description:
# When a BAT contains only one BUN a select returns this BUN,
# even when it's not in the selection range:
# 
# #You are system administrator (adm)!
# >b:=new(oid,oid);
# >b.insert(oid(1),oid(2));
# >b.select(oid(3)).print;
# #-----------------#
# # oid   | tmp_25  #
# #-----------------#
# [ 1@0,    2@0     ]
# >b.select(oid(3)).print;
# #-----------------#
# # oid   | tmp_25  #
# #-----------------#

setoid(oid(20000000));
var b:=new(oid,oid);
b.insert(oid(1),oid(2));
b.select(oid(3)).print();
b.select(oid(3)).print();
quit();
